force-app/main/default/objects/Product2/fields/About_the_Product__c.field-meta.xml
<CustomField>
    <fullName>About_the_Product__c</fullName>
    <label>Ingredients</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>