force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salty Snacks</fullName>
            </value>
            <value>
                <fullName>Sweet Snacks</fullName>
            </value>
            <value>
                <fullName>Confectionery</fullName>
            </value>
            <value>
                <fullName>Biscuits</fullName>
            </value>
            <value>
                <fullName>Premium Range</fullName>
            </value>
            <value>
                <fullName>Health Bars</fullName>
            </value>
            <value>
                <fullName>Kids Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>