force-app/main/default/objects/Product2/fields/Expected_Facings__c.field-meta.xml
<CustomField>
    <fullName>Expected_Facings__c</fullName>
    <description>Number of shelf facings (product units visible from front) defined in the planogram for this product</description>
    <label>Expected Shelf Facings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>