force-app/main/default/objects/Product2/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eye-Level Placement</fullName>
            </value>
            <value>
                <fullName>Top Shelf</fullName>
            </value>
            <value>
                <fullName>Bottom Shelf</fullName>
            </value>
            <value>
                <fullName>Checkout Lane</fullName>
            </value>
            <value>
                <fullName>End Cap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>