force-app/main/default/objects/Product2/fields/Planogram_Position__c.field-meta.xml
<CustomField>
    <fullName>Planogram_Position__c</fullName>
    <label>Planogram Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>