force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <columns>Category__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>